--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.username=user
 spring.datasource.password=user
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/realms/test
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8180/realms/test/protocol/openid-connect/certs
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
