--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8180/real
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+spring.graphql.schema.locations=classpath:graphql/
+spring.graphql.graphiql.enabled=true
+spring.graphql.graphiql.path=/graphiql
