added sample scheduled tasks

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.graphql.schema.locations=classpath:graphql/
 spring.graphql.graphiql.enabled=true
 spring.graphql.graphiql.path=/graphiql
+
+cron.expression=*/10 * * * * *
