--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.graphql.schema.locations=classpath:graphql/
 spring.graphql.graphiql.enabled=true
 spring.graphql.graphiql.path=/graphiql
 
-cron.expression=*/10 * * * * *
+cron.expression=*/10 */10 * * * *
