v2 state machine impl changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.graphql.graphiql.enabled=true
 spring.graphql.graphiql.path=/graphiql
 
 cron.expression=*/10 */10 * * * *
+cron.expression.send.continue.event.schedule=*/30 * * * * *
