--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,12 @@
             <artifactId>spring-statemachine-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
