--- a/pom.xml
+++ b/pom.xml
@@ -28,4 +28,11 @@
         <!-- other modules -->
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
