--- a/springbootdemo1/src/main/resources/application.properties
+++ b/springbootdemo1/src/main/resources/application.properties
@@ -1,1 +1,20 @@
-spring.application.name=springbootdemo1
+spring.application.name=springbootdemo
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/testdb
+spring.datasource.username=user
+spring.datasource.password=user
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/realms/test
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8180/realms/test/protocol/openid-connect/certs
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+spring.graphql.schema.locations=classpath:graphql/
+spring.graphql.graphiql.enabled=true
+spring.graphql.graphiql.path=/graphiql
+
+cron.expression=0 0 */2 * * *
+cron.expression.send.continue.event.schedule=0 */30 * * * *
