consume xml string and transform to Java.class

--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -1,10 +1,16 @@
-spring.application.name=producer
+spring.application.name=consumer
 
 server.port=8083
 
-spring.activemq.broker-url=tcp://activemq:61616
+spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=password
+spring.activemq.packages.trust-all=true
 
 # true for topics, false for queues
 spring.jms.pub-sub-domain=false
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/testdb
+spring.datasource.username=consumerUser1
+spring.datasource.password=consumerUser1
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
