--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       - activemq
     environment:
       - SPRING_ACTIVEMQ_BROKER_URL=tcp://activemq:61616
+      - SPRING_DATASOURCE_URL=jdbc:mariadb://mariadb:3306/testdb
     ports:
       - "8083:8083"
 
