--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <modules>
         <module>shared</module>
         <module>springbootdemo1</module>
+        <module>consumer</module>
         <!-- other modules -->
     </modules>
 
@@ -32,6 +33,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
