--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>shared</artifactId>
     <packaging>jar</packaging>
-    <version>${project.version}</version>
+    <version>1.0.0</version>
 
     <properties>
         <java.version>17</java.version>
@@ -46,6 +46,12 @@
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.11.1</version>
         </dependency>
     </dependencies>
 
